# openglParametricPlot

./: README.md  openglParametricPlot.cabal
src/: ParametricPlot.hs  Quads.hs
src-exe/: Main.hs
src/Utils/: Normal.hs  QuadColor.hs
