name:                openglParametricPlot
version:             0.1.0.0
homepage:            https://github.com/stla/openglParametricPlot#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ParametricPlot
                     , Quads
                     , Utils.Normal
                     , Utils.QuadColor
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
  default-language:    Haskell2010

executable conicalspiral
  buildable: True
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  ghc-options:         -O2 -threaded   
  build-depends:       base >= 4.7 && < 5
                     , openglParametricPlot
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/openglParametricPlot
